# jozin

./: .gitignore  Makefile  README
dict/: adjs  class  field  loc  meth
doc/: Makefile  Makefile.am  applet.html  bluesky.html  download.html  faq.html  feedback.html  history.html  index.html  license.html  links.html  usage.html
doc/gimp/: jode-logo.xcf
jode/: Jozin.java  Makefile  Makefile.dep
jode/bytecode/: .Reference.java.swp  ClassInfo.java  Makefile  Reference.java
jode/decompiler/: LocalInfo.java  Main.java  Makefile  MethodAnalyzer.java  MethodAnalyzer.java.orig  OuterValues.java  OuterValues.java.orig  TabbedPrintWriter.java
jode/expr/: Makefile
jode/flow/: Makefile
jode/jvm/: Makefile
jode/obfuscator/: ClassBundle.java  Makefile  PackageIdentifier.java
jode/obfuscator/modules/: JozinRenamer.java  ListRenamer.java  LocalOptimizer.java  Makefile  Makefile.dep
jode/swingui/: .Main.java.swp  HierarchyTreeModel.java  Main.java  Makefile  PackagesTreeModel.java
jode/type/: Makefile
jode/util/: Makefile  Makefile.dep
test/: AnonymousClass.java  AnonymousJavac.java  ArrayCloneTest.java  ArrayTest.java  AssignOp.java  ClassOpTest.java  ConstantTypes.java  Expressions.java  Flow.java  For.java  HintTypeTest.java  IfCombine.java  InlineTest.java  InnerClass.java  InnerCompat.java  LocalTypes.java  Makefile  MethodScopedClass.java  OptimizeTest.java  ResolveConflicts.java  TriadicExpr.java  TryCatch.java  Unreach.java
